--- a/Pipfile
+++ b/Pipfile
@@ -1,19 +1,12 @@
 [[source]]
-
-url = "https://pypi.python.org/simple"
+url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
-
 [packages]
-
 "boto3" = "*"
-
 
 [dev-packages]
 
-pylint = "*"
-rope = "*"
-"autopep8" = "*"
-yapf = "*"
-twine = "*"
+[requires]
+python_version = "3.6"
